--- a/whattoeat/application/modules/estabelecimento/views/scripts/empresa/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/empresa/index.phtml
@@ -6,7 +6,7 @@
     <ul>
         <li><a href="#tabs-1">Empresa</a></li>
         <li><a href="#tabs-2">Tipos de produtos</a></li>
-      
+      <li><a href="#tabs-3">Horario</a></li>
     </ul>
     <div id="tabs-1">
         <div class="contentForm">
@@ -235,5 +235,93 @@
                 </div>
             </div>
           
+               <div id="tabs-3">
+                <form action="<?php echo $this->baseUrl() ?>/estabelecimento/empresa/add" method="post" class="frm" id='form3' onsubmit="return validateForm('form3');" >
+                    <div class="contentForm">
+                        <fieldset style=" margin: 0; padding: 0;">
+                            <legend>Horario:</legend>
+
+			<p><center>Deixe em branco os dias em que nÃ£o houver atendimento</center></p>
+
+                            <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
+			        <tr>
+                                    <td align="center">&nbsp;</td>
+                                    <td align="center"> Inicio do atendimento</td>
+                                    <td align="center"> Fim do atendimento</td>
+                                </tr>
+                                <tr>
+                                    <td align="center">&nbsp;</td>
+                                    <td align="center"> HH:MM </td>
+                                    <td align="center"> HH:MM (23:59 para meia noite)</td>
+                                </tr>
+                                <tr>
+                                    <td align="center">Segunda</td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Inicio do atendimento'  name="val[Monday][hora_inicio]" value="<?php echo $this->formData3['Monday']['hora_inicio'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Fim do atendimento'  name="val[Monday][hora_fim]" value="<?php echo $this->formData3['Monday']['hora_fim'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+                                <tr>
+                                    <td align="center">Terca</td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Inicio do atendimento'  name="val[Tuesday][hora_inicio]"  value="<?php echo $this->formData3['Tuesday']['hora_inicio'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Fim do atendimento'  name="val[Tuesday][hora_fim]" value="<?php echo $this->formData3['Tuesday']['hora_fim'] ?>" style="width: 200px;" >
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+                                <tr>
+                                    <td align="center">Quarta</td>
+                                    <td align="center"><input type="text" class="input-medium validTime"  title='Por favor, indique Inicio do atendimento'  name="val[Wednesday][hora_inicio]"  value="<?php echo $this->formData3['Wednesday']['hora_inicio'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                    <td align="center"><input type="text" class="input-medium validTime"  title='Por favor, indique Fim do atendimento'  name="val[Wednesday][hora_fim]" value="<?php echo $this->formData3['Wednesday']['hora_fim'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+                                <tr>
+                                    <td align="center">Quinta</td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Inicio do atendimento'  name="val[Thursday][hora_inicio]"  value="<?php echo $this->formData3['Thursday']['hora_inicio'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Fim do atendimento'  name="val[Thursday][hora_fim]" value="<?php echo $this->formData3['Thursday']['hora_fim'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+                                <tr>
+                                    <td align="center">Sexta</td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Inicio do atendimento'  name="val[Friday][hora_inicio]"  value="<?php echo $this->formData3['Friday']['hora_inicio'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Fim do atendimento'  name="val[Friday][hora_fim]" value="<?php echo $this->formData3['Friday']['hora_fim'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+				<tr>
+                                    <td align="center">Sabado </td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Inicio do atendimento'  name="val[Saturday][hora_inicio]"  value="<?php echo $this->formData3['Saturday']['hora_inicio'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Fim do atendimento'  name="val[Saturday][hora_fim]" value="<?php echo $this->formData3['Saturday']['hora_fim'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+                                <tr>
+                                    <td align="center">Domingo</td>
+                                    <td align="center"><input type="text" class="input-medium validTime"  title='Por favor, indique Inicio do atendimento'  name="val[Sunday][hora_inicio]"  value="<?php echo $this->formData3['Sunday']['hora_inicio'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                    <td align="center"><input type="text" class="input-medium  validTime"  title='Por favor, indique Fim do atendimento'  name="val[Sunday][hora_fim]" value="<?php echo $this->formData3['Sunday']['hora_fim'] ?>" style="width: 200px;">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+
+                                <tr>
+                                    <td colspan="3" height="20">&nbsp;</td>
+                                </tr>
+                            </table>
+                        </fieldset>
+                        <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
+                            <tr>
+                                <td><input type="hidden" name="emorFrom" value="3">
+                                    <input type="hidden" name="empresaId" value="<?php echo $this->empresaId; ?>">
+                                    <input type="hidden" name="action" value="<?php echo $this->action; ?>">
+                                    <input type="submit" name="Save" value="Salvar" >
+                                    <input type="button" name="Save" value="Remover" onclick="deleteHorario('<?php echo $this->empresaId; ?>')">
+                                    <input type="button" name="Save" value="New" onclick="location.href='<?php echo $this->baseUrl() ?>/estabelecimento/empresa/'">
+                        </td>
+                    </tr>
+                </table>
+        </form>
+    </div>
+    
 </div>
 </div>
