--- a/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
@@ -4,7 +4,7 @@
         <ul>
             <li><a href="#tab1">Produto</a></li>
             <li><a href="#tab2">Imagens</a></li>
-           <!-- <li><a href="#tab3">Categorias Permitidas como Adicional</a></li> -->
+            <li><a href="#tab3">Categorias Permitidas como Adicional</a></li> 
             <li><a href="#tab4">Ingredientes</a></li> 
             <li><a href="#tab5">Tamanhos</a></li>
 
@@ -40,16 +40,16 @@
                         <td>Cobrado Por Quilo ?<input type="checkbox" value="1" name="cobrado_por_quilo" <?php if ($this->formData['cobrado_por_quilo'] == 1)
                             {
                                 echo 'checked';
-                            } ?>>
+                            } ?> > 
 
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div> </td>
                         <td>Disponivel ? <input type="checkbox" value="1" name="disponivel" <?php if ($this->formData['disponivel'] == 1)
                             {
                                 echo 'checked';
-                            } ?>>
+                            } ?> >
 
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
-                    </tr>
+                    </tr> 
                     <tr><td colspan="2" height="20">&nbsp;</td></tr>
                     <tr>
                         <td colspan="2" valign="top" style="text-align: top; vertical-align: top;">Descrição do produto. Inlcua aqui os ingredientes utilizados, forma de preparo e qualquer outro diferencial que torna seu produto especial.<br>
@@ -121,7 +121,7 @@
     </div>
 
 
-    <!--
+    
     <div id="tab3">
         <div class="contentForm">
             <form action="/estabelecimento/produto/add" method="post" class="frm" id='form3' onsubmit="return validateForm('form3');" >
@@ -129,7 +129,7 @@
                     <legend>Categorias Permitidas como Adicional</legend>
                     <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
                         <tr><td colspan="30">
-                                Indique quais são as categorias de ingredientes que estarão disponívies com adicionais para este produto.
+                                Indique quais são as categorias de ingredientes que estarão disponívies como adicionais para este produto.
                             </td></tr>
                         <tr>
 <?php   
@@ -147,12 +147,12 @@
                                 }
 ?>
                                 <td>
-                                    <input type="checkbox" name="cp[cod_categoria_empresa][]" value="<?php //echo $v['cod_categoria_empresa'] ?>" <?php //echo $checked ?> > <?php //echo $v['nome'] ?>
+                                    <input type="checkbox" name="cp[cod_categoria_empresa][]" value="<?php echo $v['cod_categoria_empresa'] ?>" <?php echo $checked ?> > <?php echo $v['nome'] ?>
                                     <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
                                 </td>
 <?php if ($i >= 2)
                                 {
-                                    //echo '</tr><tr>';
+                                    echo '</tr><tr>';
                                     $i = 0;
                                 } ?>
 <?php $i++;
@@ -167,8 +167,8 @@
                 <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
                     <tr>
                         <td><input type="hidden" name="emorFrom" value="3">
-                            <input type="hidden" name="action" value="<?php  //echo $this->action; ?>">
-                            <input type="hidden" name="produtoId" value="<?php //echo $this->produtoId ?>">
+                            <input type="hidden" name="action" value="<?php  echo $this->action; ?>">
+                            <input type="hidden" name="produtoId" value="<?php echo $this->produtoId ?>">
                             <input type="submit" name="Save" value="Salvar">
                         </td>
                     </tr>
@@ -178,7 +178,7 @@
     </div>      
 
 
-    -->
+    
     <div id="tab4">
 
         <div class="contentForm">
@@ -194,7 +194,7 @@
                             <tr>
                                 <td align="center">&nbsp;</td>
                                 <td align="center"> Custo</td>
-                                <td align="center">Valor Caloricotd</td>
+                                <td align="center">Valor Calorico</td>
                             </tr>
 <?php
                             foreach ($this->ingredienteEmpresaRec as $k => $v)
@@ -263,10 +263,10 @@
 <?php if (!empty($this->totalPrco))
                                 { ?>
                      <!--               <tr>
-                                       <td colspan="2" align="right"><b>Preco De Custo : R$ <?php //echo $this->totalPrco; ?></b></td>                                  </tr>
+                                       <td colspan="2" align="right"><b>Preco De Custo : R$ <?php //echo $this->totalPrco; ?></b></td>       -->                           </tr>
 <?php } ?>
 
-                                <tr> -->
+                          <!--      <tr> -->
                                     
                                     <td>Descricao &nbsp;&nbsp;&nbsp;<br>
                                         <input type="text" class="input-medium RQR required"  title='Por favor, indique a descrição' maxlength="20"  name="descricao" id="descricao" value="<?php echo $this->formData5['descricao'] ?>" style="width: 200px;">
