--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -8,7 +8,10 @@
     <script type="text/javascript" src="/js/portal.js"></script>
 
 </head>
-
+	
+	<div class="topo">
+		<div class="logo"><img src="../img/logotipo.png"></div>
+	</div>
     <?php
 
 	if(!empty($this->nomeCliente))
