Ajuste no layout, utilizando o framework bootstrap.

--- a/whattoeat/application/modules/portal/views/scripts/cliente/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/cliente/index.phtml
@@ -14,6 +14,11 @@
 
 <body>
 
+	<div class="topo">
+		<div class="logo">
+			<img src="../img/logotipo.png"/>
+		</div>
+	</div>
     <?php
 
 	if(!empty($this->nomeCliente))
