--- a/whattoeat/public/css/portal.css
+++ b/whattoeat/public/css/portal.css
@@ -11,7 +11,7 @@
    Syntax recommendation http://www.w3.org/TR/REC-CSS2/
 */
 body {
-	background: #FDFDFD;
+	background: #FEFEFE;
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -91,31 +91,26 @@ ol, ul {
     color: #333;
     display: block;
     height: 40px;
-    left: 32.6em;
+    left: 38.5em;
     position: absolute;
     text-align: center;
     top: 27em;
     width: 40px;
 }
+
+.option-callout p {
+    margin-top: 10px;
+}
+
 .columnListing .leftSide, .columnListing .rightSide {
     float: left;
     min-height: 525px;
     padding: 30px;
     position: relative;
-    width: 436px;
+    width: 37em;
 }
 .columnListing .leftSide {
     border-right: 1px solid #DDD;
-}
-.columnListing .leftSide,.columnListing .rightSide {
-    float: left;
-    min-height: 525px;
-    padding: 30px;
-    position: relative;
-    width: 436px;
-}
-.option-callout p {
-    margin-top: 10px;
 }
 .formBuscar {
 	border: solid gray;
