--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -30,13 +30,12 @@
 
     ?>
 
-
 <div align="center" width="80%">
 
     <div class="formBuscar">
         <form action="/portal/index/consulta" method="post" class="" id='form1'>
 
-            <h2>Entre com os critérios de pesquisa</h2> 
+            <h2>Entre com os critérios de pesquisa por favor</h2> 
 
             <div style="text-align: left; border: transparent; width: 380px; ">
 		Ex:  macarrão, massa verde, "Macarronada da Tia Dalva"
@@ -112,6 +111,8 @@
 
 </div>
 
+
+<p style="padding-left: 50px;"><?php $this->headline; ?></p>
 
 
 <?php
