--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -35,7 +35,8 @@
     <div class="formBuscar">
         <form action="/portal/index/consulta" method="post" class="" id='form1'>
 
-            <h2>Entre com os critérios de pesquisa por favor</h2> 
+            <h1>Entre com os critérios de pesquisa por favor. Você pode procurar por ingredientes específicos, lugares, pratos ou 
+            qualquer outro critério disponível para te trazer a opção mais certa para você!</h1> 
 
             <div style="text-align: left; border: transparent; width: 380px; ">
 		Ex:  macarrão, massa verde, "Macarronada da Tia Dalva"
